--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.1",
     "gsap": "^3.12.7",
+    "lucide-react": "^0.473.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "15.1.4",
     "react": "^19.0.0",
